# LLMCompanionCord

./: .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  main.py  pyproject.toml
src/llmcompanioncord/: __init__.py  __main__.py  bot.py  config_schema.py  llm_client.py  logger.py  main.py  message_buffer.py
